added index and sourced in js

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
-        <script type="text/javascript" src="100-Functions.md"></script>
-        <script type="text/javascript" src="110-Conditional.md"></script>
-        <script type="text/javascript" src="120-Arrays.md"></script>
-        <script type="text/javascript" src="130-LoopsArrays.md"></script>
-        <script type="text/javascript" src="140-LoopsArraysAndNestedFunctions.md"></script>
-        <script type="text/javascript" src="150-LoopsArrayOfObject.md"></script>
-        <script type="text/javascript" src="160-LoopsAndTwoDimensionalArrays.md"></script>
+        <script type="text/javascript" src="100-Functions.js"></script>
+        <script type="text/javascript" src="110-Conditional.js"></script>
+        <script type="text/javascript" src="120-Arrays.js"></script>
+        <script type="text/javascript" src="130-LoopsArrays.js"></script>
+        <script type="text/javascript" src="140-LoopsArraysAndNestedFunctions.js"></script>
+        <script type="text/javascript" src="150-LoopsArrayOfObject.js"></script>
+        <script type="text/javascript" src="160-LoopsAndTwoDimensionalArrays.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
